<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/svAdvertisement"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.view.AddFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/advertisementDescription"
        android:textColor="@color/white"
        android:textSize="25sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintDimensionRatio="1:0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        android:layout_marginTop="@dimen/margin_10"
        app:hintTextColor="@color/pink"
        android:textColorHint="@color/medium_grey"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:maxLength="30"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipAge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintDimensionRatio="1:0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipName"
        android:layout_marginTop="@dimen/margin_15"
        app:hintTextColor="@color/pink"
        android:textColorHint="@color/medium_grey"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tipAge"
            android:text="@string/yourGender"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintStart_toStartOf="@+id/tipAge"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvGender"
            app:layout_constraintStart_toStartOf="@+id/tvGender"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:textColor="@color/black"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textColor="@color/black"
                />
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipNationality"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgGender"
            android:layout_marginTop="@dimen/margin_15"
            app:hintTextColor="@color/pink"
            android:textColorHint="@color/medium_grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedNationality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nationality"
                android:inputType="text"
                android:maxLength="15"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spMarriageStatus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tipNationality"
            app:layout_constraintStart_toStartOf="@+id/tipNationality"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            android:background="@drawable/spinner_background"
            />
        <Spinner
            android:id="@+id/spChildren"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            app:layout_constraintTop_toBottomOf="@+id/spMarriageStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/spinner_background"
            />
        <TextView
            android:id="@+id/tvAgeRestriction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/spChildren"
            android:text="@string/ageRestriction"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintStart_toStartOf="@+id/spChildren"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipFromAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvAgeRestriction"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeRestriction"
            android:layout_marginTop="@dimen/margin_15"
            app:hintTextColor="@color/pink"
            android:textColorHint="@color/medium_grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedFromAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fromAge"
                android:inputType="number"
                android:maxLength="2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipTillAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tipFromAge"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeRestriction"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginStart="@dimen/margin_15"
            app:hintTextColor="@color/pink"
            android:textColorHint="@color/medium_grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedTillAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tillAge"
                android:inputType="number"
                android:maxLength="2"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipTelegram"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipFromAge"
            android:layout_marginTop="@dimen/margin_15"
            app:hintTextColor="@color/pink"
            android:textColorHint="@color/medium_grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedTelegram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telegram"
                android:inputType="textPersonName"
                android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
                android:text="@string/telegramUserName"
                android:maxLength="50"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            app:layout_constraintTop_toBottomOf="@+id/tipTelegram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/spinner_background"
            />
        <Spinner
            android:id="@+id/spCity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.16"
            app:layout_constraintTop_toBottomOf="@+id/spCountry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/spinner_background"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipMoreInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintDimensionRatio="1:0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spCity"
            android:layout_marginTop="@dimen/margin_15"
            app:hintTextColor="@color/pink"
            android:textColorHint="@color/medium_grey"
            android:gravity="top"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedMoreInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/more_info"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="1000"
                android:gravity="top"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tipMoreInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/submit"
            app:backgroundTint="@color/carnation_pink_background"
            />
        <com.sovchilar.made.presentation.fragments.view.AddAdvertisementCustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mbtnSubmit"
            android:padding="8dp"
            android:textSize="16sp"
            android:hint="Enter text..."
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>